# bmo

./: .dockerignore  .gitignore  Dockerfile  GUIDE.md  agent.py  docker-compose.yml  pyproject.toml  test.py
.github/agents/: agent-one.agent.md  brainstorm-one.agent.md  opsx-one-init.agent.md  opsx-one.agent.md
bmo/: assistant.py  config.py  llm_gatekeeper.py  memory_api.py  memory_policy.py  prompt.py  room.py  services.py  status.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  serve.ts  server.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/scripts/: generate-icons.mjs
frontend/src/: App.css  App.tsx  index.css  sfx.ts  vite-env.d.ts
frontend/src/components/: MemoriesPage.tsx
frontend/src/hooks/: useAgentVisualState.ts  useButtonPress.ts  useSecretCombo.ts  useStatusData.ts  useTrackVolume.ts
frontend/src/types/: bmo.ts
openspec/: config.yaml
openspec/changes/add-cassette-tool/: proposal.md
openspec/changes/add-internet-search-tool/: proposal.md  tasks.md
openspec/changes/add-loading-status-message/: tasks.md
openspec/changes/add-mem0-gated-memory-mode/: design.md  proposal.md  tasks.md
openspec/changes/add-memory-management-ui/: design.md
openspec/changes/migrate-npm-to-bun/: proposal.md  tasks.md
openspec/changes/refactor-agent-modules/: proposal.md
openspec/changes/replace-search-with-tavily/: design.md  (+2 more)
prompts/: bmo.json
scripts/: backfill-mem0-memories.py  generate-token.mjs  setup-dev.sh  setup-prod.sh
services/memory-api/: Dockerfile  main.py  pyproject.toml
tests/: test_memory_api.py
(+126 files in other folders)
