[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[deepgram,google,groq,silero,turn-detector]~=1.4",
    "livekit-plugins-fishaudio>=1.4.2",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
    "mem0ai>=0.1.0",
    "qdrant-client>=1.10.0",
    "aiohttp>=3.9.0",
]
